fixed dark mode

--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@
 }
 
 body {
-  background-color: #FFFFFF;
+  background-color: #000;
 }
